匹配对战答题页面

--- a/pages/matching/index.less
+++ b/pages/matching/index.less
@@ -5,6 +5,9 @@ Page {
 .matching {
     height: 100%;
     width: 100%;
+    top: 0;
+    left: 0;
+    overflow: hidden;
     color: #dafffe;
     background-color: #46d7b6;
     .both {
@@ -13,9 +16,9 @@ Page {
             width: 100%;
             height: 170rpx;
             .me,.rival {
-                width: 400rpx;
+                width: 360rpx;
                 background: #ffffff;
-                height: 100%;
+                height: 130rpx;
                 padding: 20rpx;
                 top: 0;
                 .name {
@@ -37,7 +40,8 @@ Page {
                 border-radius: 0 85rpx 85rpx 0;
             }
             .rival {
-                right: 0;
+                padding-right: 80rpx;
+                right: -60rpx;
                 border-radius: 85rpx 0 0 85rpx;
             }
         }
