--- a/app.wxss
+++ b/app.wxss
@@ -2,6 +2,7 @@
 
 @import 'assets/styles/global';
 @import 'assets/styles/iconfont';
+@import 'assets/styles/animation';
 
 .container {
     height: 100%;
@@ -12,3 +13,7 @@
     padding: 200rpx 0;
     box-sizing: border-box;
 } 
+Page {
+    height: 100%;
+    width: 100%;
+}
