--- a/pages/matching/index.wxss
+++ b/pages/matching/index.wxss
@@ -5,6 +5,9 @@ Page {
 .matching {
   height: 100%;
   width: 100%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
   color: #dafffe;
   background-color: #46d7b6;
 }
@@ -20,9 +23,9 @@ Page {
 .matching .both .rival-box .me,
 .matching .both .me-box .rival,
 .matching .both .rival-box .rival {
-  width: 400rpx;
+  width: 360rpx;
   background: #ffffff;
-  height: 100%;
+  height: 130rpx;
   padding: 20rpx;
   top: 0;
 }
@@ -50,7 +53,8 @@ Page {
 }
 .matching .both .me-box .rival,
 .matching .both .rival-box .rival {
-  right: 0;
+  padding-right: 80rpx;
+  right: -60rpx;
   border-radius: 85rpx 0 0 85rpx;
 }
 .matching .both .stata .vs {
