--- a/pages/matching/index.less
+++ b/pages/matching/index.less
@@ -62,17 +62,17 @@ Page {
         .hint {
             font-size: 26rpx;
         }
-        .give_up{
-            border-radius: 80rpx;
-            font-size: 36rpx;
-            font-weight: bold;
-            padding: 18rpx 0;
-            width: 350rpx;
-            background-color: transparent;
-            border: 14rpx solid #ffffff;
-            color:#fff;
-            // box-shadow:0 2px 4px rgba(0,0,0,.4);
-            // text-shadow:0 2px 4px rgba(0,0,0,.5);
-        }
+    }
+    .match-btn{
+        border-radius: 80rpx;
+        font-size: 36rpx;
+        font-weight: bold;
+        padding: 16rpx 0;
+        width: 350rpx;
+        background-color: transparent;
+        border: 10rpx solid #ffffff;
+        color:#fff;
+        // box-shadow:0 2px 4px rgba(0,0,0,.4);
+        // text-shadow:0 2px 4px rgba(0,0,0,.5);
     }
 }
