--- a/pages/fight/index.less
+++ b/pages/fight/index.less
@@ -70,24 +70,30 @@
         background: #ffffff;
         width: 100%;
         border-radius: 20rpx 20rpx 0 0;
+        .type {
+            padding: 0 40rpx 20rpx;
+            .text {
+                width: 74rpx;
+                height: 40rpx;
+                font-size: 28rpx;
+                line-height: 40rpx;
+                border: 1px solid #46d7b6;
+                color: #46d7b6;
+                border-radius: 6rpx;
+            }
+            .double {
+                width: 235rpx;
+                height: 87rpx;
+                bottom: 46rpx;
+                left: 40rpx;
+            }
+        }
         .topic {
             color: #525053;
             flex: 1;
             width: 100%;
             padding: 0 20rpx;
             overflow-y: auto;
-            .type {
-                padding: 0 20rpx 20rpx;
-                .text {
-                    width: 74rpx;
-                    height: 40rpx;
-                    font-size: 28rpx;
-                    line-height: 40rpx;
-                    border: 1px solid #46d7b6;
-                    color: #46d7b6;
-                    border-radius: 6rpx;
-                }
-            }
             .subject {
                 padding: 0 20rpx;
                 font-size: 32rpx;
@@ -128,6 +134,9 @@
         }
         .topic-footer {
             height: 120rpx;
+            .sub {
+                background-color: #46d7b6;
+            }
         }
     }
 }
