--- a/pages/fight/index.wxss
+++ b/pages/fight/index.wxss
@@ -85,17 +85,10 @@
   width: 100%;
   border-radius: 20rpx 20rpx 0 0;
 }
-.fight .topic-box .topic {
-  color: #525053;
-  flex: 1;
-  width: 100%;
-  padding: 0 20rpx;
-  overflow-y: auto;
+.fight .topic-box .type {
+  padding: 0 40rpx 20rpx;
 }
-.fight .topic-box .topic .type {
-  padding: 0 20rpx 20rpx;
-}
-.fight .topic-box .topic .type .text {
+.fight .topic-box .type .text {
   width: 74rpx;
   height: 40rpx;
   font-size: 28rpx;
@@ -103,6 +96,19 @@
   border: 1px solid #46d7b6;
   color: #46d7b6;
   border-radius: 6rpx;
+}
+.fight .topic-box .type .double {
+  width: 235rpx;
+  height: 87rpx;
+  bottom: 46rpx;
+  left: 40rpx;
+}
+.fight .topic-box .topic {
+  color: #525053;
+  flex: 1;
+  width: 100%;
+  padding: 0 20rpx;
+  overflow-y: auto;
 }
 .fight .topic-box .topic .subject {
   padding: 0 20rpx;
@@ -141,6 +147,9 @@
 }
 .fight .topic-box .topic-footer {
   height: 120rpx;
+}
+.fight .topic-box .topic-footer .sub {
+  background-color: #46d7b6;
 }
 .animation {
   animation: fadeIn 1s;
