--- a/pages/week/index.wxml
+++ b/pages/week/index.wxml
@@ -1,7 +1,59 @@
 <!--pages/week/index.wxml-->
 <view class="week-box">
-    <view class="week"  wx:if="{{done}}">
-
+    <view class="week df flexCol"  wx:if="{{done&&progress>=100}}">
+        <view class="both pr pt10 df justBet">
+            <view class="me-box pr">
+                <view class="me pa df justBet bounceInLeft animated">
+                    <view class="header">
+                        <image src="{{meInfo.avatarUrl}}"></image>
+                    </view>
+                    <view class="info pr5">
+                        <view class="name overeli fw900">{{meInfo.nickName}}</view>
+                        <view class="rank">
+                            
+                        </view>
+                    </view>
+                </view>
+            </view>
+            <view class="countDown-box">
+                <view class="timer animation pr">
+                    <canvas class="countDown-bg" type="2d" id="countdownBg"></canvas>
+                    <canvas class='countDown pa' type="2d" id="countDown"></canvas>
+                </view>
+            </view>
+        </view>
+        <view class="topic-box pt15 b-sizing df flexCol">
+            <view class="type pr">
+                <view class="text ac b-sizing">{{questionType=='0'?"单选":"多选"}}</view>
+                <image wx:if="{{questionType=='1'}}" class="double pa" src="../../assets/images/fight/double.png" />
+            </view>
+            <view class="topic b-sizing">
+                <view class="subject">{{questionIndex+1}}.{{subject}}</view>
+                <view class="answer-list">
+                    <view class="answer-box animation al-center justBet" 
+                        style="animation-delay:.{{index * 2}}s" 
+                        wx:for="{{answerList}}" 
+                        wx:key="index"
+                    >
+                        <view class="me player">
+                            <image src="{{meInfo.header}}"></image>
+                        </view>
+                        <view class="answer b-sizing al-center justBet" bindtap="submitAnswer" data-id="{{index}}">
+                            <view class="text">{{item.answer}}</view>
+                            <view class="status">
+                                <text class="iconfont icon-zhengque"></text>
+                            </view>
+                        </view>
+                        <view class="rival player">
+                            <image src="{{rivalInfo.header}}"></image>
+                        </view>
+                    </view>
+                </view>
+            </view>
+            <view class="topic-footer">
+                <button type="primary" class="next-btn" bindtap="nextTopic">下一题</button>
+            </view>
+        </view>
     </view>
     <view wx:else class="loading-box pa">
         <view class="loading tVerCenter ac">
