--- a/pages/fight/index.less
+++ b/pages/fight/index.less
@@ -1,146 +1,217 @@
-.fight {
+.fight-box {
     height: 100%;
     width: 100%;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    color: #dafffe;
     background-color: #46d7b6;
-    .both {
-        .me-box,.rival-box {
-            width: 100%;
-            height: 110rpx;
-            .me,.rival {
-                width: 300rpx;
-                background: #ffffff;
-                height: 90rpx;
-                padding: 10rpx;
-                top: 0;
-                .info {
-                    flex: 1;
-                    .score {
-                        color: #f5b613;
-                        font-size: 38rpx;
-                    }
+    .matching {
+        height: 100%;
+        width: 100%;
+        color: #dafffe;
+        overflow: hidden;
+        .both {
+            flex: 1;
+            .me-box,.rival-box {
+                width: 100%;
+                height: 170rpx;
+                .me,.rival {
+                    width: 360rpx;
+                    background: #ffffff;
+                    height: 130rpx;
+                    padding: 20rpx;
+                    top: 0;
                     .name {
                         color: #3b393c;
-                        font-size: 24rpx;
+                        line-height: 130rpx;
+                        flex: 1;
+                        font-size: 36rpx;
                     }
-
+                    .header {
+                        image {
+                            border-radius: 50%;
+                            height: 130rpx;
+                            width: 130rpx;
+                        }
+                    }
                 }
-                .header {
+                .me {
+                    left: 0;
+                    border-radius: 0 85rpx 85rpx 0;
+                }
+                .rival {
+                    padding-right: 80rpx;
+                    right: -60rpx;
+                    border-radius: 85rpx 0 0 85rpx;
+                }
+            }
+            .stata {
+                .vs {
+                    padding: 28rpx 0;
                     image {
-                        border-radius: 50%;
-                        height: 90rpx;
-                        width: 90rpx;
+                        height: 80rpx;
+                        width: 120rpx;
                     }
                 }
-            }
-            .me {
-                padding-left: 50rpx;
-                left: -40rpx;
-                border-radius: 0 55rpx 55rpx 0;
-            }
-            .rival {
-                padding-right: 50rpx;
-                right: -40rpx;
-                border-radius: 55rpx 0 0 55rpx;
+                .hint {
+                    font-size: 36rpx;
+                }
             }
         }
-        .timer {
-            width: 110rpx;
-            height: 110rpx;
-            top: 60rpx;
-            border-radius: 104rpx;
-            animation-delay:1s;
-            .countDown-bg {
-                height: 110rpx;
-                width: 110rpx;
+        .footer {
+            .hint {
+                font-size: 26rpx;
             }
-            .countDown {
-                top: 0;
-                left: 0;
-                height: 110rpx;
-                width: 110rpx;
-            }
+        }
+        .match-btn{
+            border-radius: 80rpx;
+            font-size: 36rpx;
+            font-weight: bold;
+            padding: 16rpx 0;
+            width: 350rpx;
+            background-color: transparent;
+            border: 10rpx solid #ffffff;
+            color:#fff;
+            // box-shadow:0 2px 4px rgba(0,0,0,.4);
+            // text-shadow:0 2px 4px rgba(0,0,0,.5);
         }
     }
-    .topic-box {
-        flex: 1;
-        background: #ffffff;
+    .fight {
+        height: 100%;
         width: 100%;
-        border-radius: 20rpx 20rpx 0 0;
-        .type {
-            padding: 0 40rpx 20rpx;
-            .text {
-                width: 74rpx;
-                height: 40rpx;
-                font-size: 28rpx;
-                line-height: 40rpx;
-                border: 1px solid #46d7b6;
-                color: #46d7b6;
-                border-radius: 6rpx;
-            }
-            .double {
-                width: 235rpx;
-                height: 87rpx;
-                bottom: 46rpx;
-                left: 40rpx;
-            }
-        }
-        .topic {
-            color: #525053;
-            flex: 1;
-            width: 100%;
-            padding: 0 20rpx;
-            overflow-y: auto;
-            .subject {
-                padding: 0 20rpx;
-                font-size: 32rpx;
-                line-height: 46rpx;
-            }
-            .answer-list {
-                padding-top: 30rpx;
-                .answer-box {
-                    padding-top: 20rpx;
-                    .player {
-                        width: 60rpx;
-                        padding: 0 12rpx;
-                        image {
-                            width: 60rpx;
-                            height: 60rpx;
-                            border-radius: 50%;
-                        }
-                    }
-                    .answer {
+        overflow: hidden;
+        .both {
+            .me-box,.rival-box {
+                width: 100%;
+                height: 110rpx;
+                .me,.rival {
+                    width: 300rpx;
+                    background: #ffffff;
+                    height: 90rpx;
+                    padding: 10rpx;
+                    top: 0;
+                    .info {
                         flex: 1;
-                        padding: 20rpx 30rpx;
-                        border-radius: 16rpx;
-                        background: #f5f3f6;
-                        .text {
+                        .score {
+                            color: #f5b613;
+                            font-size: 38rpx;
+                        }
+                        .name {
+                            color: #3b393c;
                             font-size: 24rpx;
                         }
-                        .status {
-                            .iconfont {
-                                font-size: 46rpx;
+    
+                    }
+                    .header {
+                        image {
+                            border-radius: 50%;
+                            height: 90rpx;
+                            width: 90rpx;
+                        }
+                    }
+                }
+                .me {
+                    padding-left: 50rpx;
+                    left: -40rpx;
+                    border-radius: 0 55rpx 55rpx 0;
+                }
+                .rival {
+                    padding-right: 50rpx;
+                    right: -40rpx;
+                    border-radius: 55rpx 0 0 55rpx;
+                }
+            }
+            .timer {
+                width: 110rpx;
+                height: 110rpx;
+                top: 60rpx;
+                border-radius: 104rpx;
+                animation-delay:1s;
+                .countDown-bg {
+                    height: 110rpx;
+                    width: 110rpx;
+                }
+                .countDown {
+                    top: 0;
+                    left: 0;
+                    height: 110rpx;
+                    width: 110rpx;
+                }
+            }
+        }
+        .topic-box {
+            flex: 1;
+            background: #ffffff;
+            width: 100%;
+            border-radius: 20rpx 20rpx 0 0;
+            .type {
+                padding: 0 40rpx 20rpx;
+                .text {
+                    width: 74rpx;
+                    height: 40rpx;
+                    font-size: 28rpx;
+                    line-height: 40rpx;
+                    border: 1px solid #46d7b6;
+                    color: #46d7b6;
+                    border-radius: 6rpx;
+                }
+                .double {
+                    width: 235rpx;
+                    height: 87rpx;
+                    bottom: 46rpx;
+                    left: 40rpx;
+                }
+            }
+            .topic {
+                color: #525053;
+                flex: 1;
+                width: 100%;
+                padding: 0 20rpx;
+                overflow-y: auto;
+                .subject {
+                    padding: 0 20rpx;
+                    font-size: 32rpx;
+                    line-height: 46rpx;
+                }
+                .answer-list {
+                    padding-top: 30rpx;
+                    .answer-box {
+                        padding-top: 20rpx;
+                        .player {
+                            width: 60rpx;
+                            padding: 0 12rpx;
+                            image {
+                                width: 60rpx;
+                                height: 60rpx;
+                                border-radius: 50%;
+                            }
+                        }
+                        .answer {
+                            flex: 1;
+                            padding: 20rpx 30rpx;
+                            border-radius: 16rpx;
+                            background: #f5f3f6;
+                            .text {
+                                font-size: 24rpx;
+                            }
+                            .status {
+                                .iconfont {
+                                    font-size: 46rpx;
+                                }
                             }
                         }
                     }
-                }
-                &.active {
-                    color: #ffffff;
+                    &.active {
+                        color: #ffffff;
+                    }
                 }
             }
-        }
-        .topic-footer {
-            height: 120rpx;
-            .sub {
-                background-color: #46d7b6;
+            .topic-footer {
+                height: 120rpx;
+                .sub {
+                    background-color: #46d7b6;
+                }
             }
         }
     }
 }
-
 
 .animation{
     animation:fadeIn 1s;
