--- a/pages/fight/index.wxml
+++ b/pages/fight/index.wxml
@@ -1,63 +1,100 @@
 <!--pages/fight/index.wxml-->
-<view class="fight df flexCol">
-    <view class="both pr pt10 df flexCol justAround pb30">
-        <view class="me-box pr">
-            <view class="me pa df ar justBet bounceInLeft animated">
-                <view class="info pr5">
-                    <view class="score fw900">{{meInfo.score}}分</view>
-                    <view class="name overeli fw900">{{meInfo.name}}</view>
+<view class="fight-box pr">
+    <view class="fight df flexCol" wx:if="{{enterAnswer}}">
+        <view class="both pr pt10 df flexCol justAround pb30">
+            <view class="me-box pr">
+                <view class="me pa df ar justBet bounceInLeft animated">
+                    <view class="info pr5">
+                        <view class="score fw900">{{meInfo.score}}分</view>
+                        <view class="name overeli fw900">{{meInfo.nickName}}</view>
+                    </view>
+                    <view class="header">
+                        <image src="{{meInfo.avatarUrl}}"></image>
+                    </view>
                 </view>
-                <view class="header">
-                    <image src="{{meInfo.header}}"></image>
+            </view>
+            <view class="timer tHorCenter animation pr">
+                <canvas class="countDown-bg" type="2d" id="countdownBg"></canvas>
+                <canvas class='countDown pa' type="2d" id="countDown"></canvas>
+            </view>
+            <view class="rival-box pr">
+                <view class="rival pa al df justBet bounceInRight animated">
+                    <view class="header">
+                        <image src="{{rivalInfo.header}}"></image>
+                    </view>
+                    <view class="info pl5">
+                        <view class="score fw900">{{rivalInfo.score}}分</view>
+                        <view class="name overeli fw900">{{rivalInfo.name}}</view>
+                    </view>
                 </view>
             </view>
         </view>
-        <view class="timer tHorCenter animation pr">
-            <canvas class="countDown-bg" type="2d" id="countdownBg"></canvas>
-            <canvas class='countDown pa' type="2d" id="countDown"></canvas>
-        </view>
-        <view class="rival-box pr">
-            <view class="rival pa al df justBet bounceInRight animated">
-                <view class="header">
-                    <image src="{{rivalInfo.header}}"></image>
+        <view class="topic-box pt15 b-sizing df flexCol">
+            <view class="type pr">
+                <view class="text ac b-sizing">{{questionType=='0'?"单选":"多选"}}</view>
+                <image wx:if="{{questionType=='1'}}" class="double pa" src="../../assets/images/fight/double.png" />
+            </view>
+            <view class="topic b-sizing">
+                <view class="subject">{{questionIndex+1}}.{{subject}}</view>
+                <view class="answer-list">
+                    <view class="answer-box animation al-center justBet" 
+                        style="animation-delay:.{{index * 2}}s" 
+                        wx:for="{{answerList}}" 
+                        wx:key="index"
+                    >
+                        <view class="me player">
+                            <image src="{{meInfo.header}}"></image>
+                        </view>
+                        <view class="answer b-sizing al-center justBet" bindtap="submitAnswer" data-id="{{index}}">
+                            <view class="text">{{item.answer}}</view>
+                            <view class="status">
+                                <text class="iconfont icon-zhengque"></text>
+                            </view>
+                        </view>
+                        <view class="rival player">
+                            <image src="{{rivalInfo.header}}"></image>
+                        </view>
+                    </view>
                 </view>
-                <view class="info pl5">
-                    <view class="score fw900">{{rivalInfo.score}}分</view>
-                    <view class="name overeli fw900">{{rivalInfo.name}}</view>
-                </view>
+            </view>
+            <view class="topic-footer">
+                <button hidden="{{questionType=='0'}}" type="primary" class="sub" bindtap="doubleSub">提交</button>
             </view>
         </view>
     </view>
-    <view class="topic-box pt15 b-sizing df flexCol">
-        <view class="type pr">
-            <view class="text ac b-sizing">{{questionType=='0'?"单选":"多选"}}</view>
-            <image wx:if="{{questionType=='1'}}" class="double pa" src="../../assets/images/fight/double.png" />
-        </view>
-        <view class="topic b-sizing">
-            <view class="subject">{{questionIndex+1}}.{{subject}}</view>
-            <view class="answer-list">
-                <view class="answer-box animation al-center justBet" 
-                    style="animation-delay:.{{index * 2}}s" 
-                    wx:for="{{answerList}}" 
-                    wx:key="index"
-                >
-                    <view class="me player">
-                        <image src="{{meInfo.header}}"></image>
-                    </view>
-                    <view class="answer b-sizing al-center justBet" bindtap="submitAnswer" data-id="{{index}}">
-                        <view class="text">{{item.answer}}</view>
-                        <view class="status">
-                            <text class="iconfont icon-zhengque"></text>
-                        </view>
-                    </view>
-                    <view class="rival player">
-                        <image src="{{rivalInfo.header}}"></image>
+    <view class="matching ac df flexCol justBet" wx:else>
+        <view class="both df flexCol justAround">
+            <view class="me-box pr">
+                <view class="me pa df justBet">
+                    <view class="name overeli">{{meInfo.nickName}}</view>
+                    <view class="header">
+                        <image src="{{meInfo.avatarUrl}}"></image>
                     </view>
                 </view>
             </view>
+            <view class="start" wx:if="{{!isMatch}}">
+                <button type="primary" class="start-btn match-btn" bindtap="startMatch">开始匹配</button>
+            </view>
+            <view class="stata" wx:else>
+                <view class="vs fw900">
+                    <image class="{{matchSuc?'':'animated infinite flipInY'}}" src="../../assets/images/matching/vs.png" />
+                </view>
+                <text class="hint">{{hint}}</text>
+            </view>
+            <view class="rival-box pr">
+                <view wx:if="{{matchSuc}}" class="rival pa df justBet bounceInRight animated">
+                    <view class="header">
+                        <image src="{{rivalInfo.header}}"></image>
+                    </view>
+                    <view class="name overeli">{{rivalInfo.name}}</view>
+                </view>
+            </view>
         </view>
-        <view class="topic-footer">
-            <button hidden="{{questionType=='0'}}" type="primary" class="sub" bindtap="doubleSub">提交</button>
+        <view class="footer pt20 pb30">
+            <view class="hint pt10 pb10">
+                <text>共5题，每题10秒答题时间</text>
+            </view>
+            <button hidden='{{matchSuc||!isMatch}}' type="primary" class="give_up match-btn" bindtap="fqAgainst">放弃对战</button>
         </view>
     </view>
 </view>
