--- a/pages/week/index.wxml
+++ b/pages/week/index.wxml
@@ -25,7 +25,6 @@
         <view class="topic-box pt15 b-sizing df flexCol">
             <view class="type pr">
                 <view class="text ac b-sizing">{{questionType=='0'?"单选":"多选"}}</view>
-                <image wx:if="{{questionType=='1'}}" class="double pa" src="../../assets/images/fight/double.png" />
             </view>
             <view class="topic b-sizing">
                 <view class="subject">{{questionIndex+1}}.{{subject}}</view>
@@ -38,7 +37,7 @@
                         <view class="me player">
                             <image src="{{meInfo.header}}"></image>
                         </view>
-                        <view class="answer b-sizing al-center justBet" bindtap="submitAnswer" data-id="{{index}}">
+                        <view class="answer b-sizing al-center justBet" bindtap="selAnswer" data-id="{{index}}">
                             <view class="text">{{item.answer}}</view>
                             <view class="status">
                                 <text class="iconfont icon-zhengque"></text>
@@ -50,8 +49,10 @@
                     </view>
                 </view>
             </view>
-            <view class="topic-footer">
-                <button type="primary" class="next-btn" bindtap="nextTopic">下一题</button>
+            <view class="topic-footer df justAround">
+                <button wx:if="{{questionIndex>0}}" type="primary" class="switch-btn" bindtap="prevTopic">下一题</button>
+                <button wx:if="{{questionIndex<questionIdList.length-1}}" type="primary" class="switch-btn" bindtap="nextTopic">下一题</button>
+                <button wx:else type="primary" class="switch-btn" bindtap="submitAnswer">提交</button>
             </view>
         </view>
     </view>
@@ -67,4 +68,5 @@
             <view class="hint">试题抽取中</view>
         </view>
     </view>
+    
 </view>
