--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,246 @@
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+page {
+  width: 100%;
+  height: 100%;
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
+.home-container {
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+}
+.top {
+  width: 100%;
+  height:500rpx;
+  background: #46d7b6;
+  overflow: hidden;
+}
+.top_userinfo {
+  height: 130rpx;
+  margin-top: 40rpx;
+}
+.userinfo_left {
+  float: left;
+  width: 130rpx;
+  height: 130rpx;
+  background: #fafffe;
+  margin-left: 70rpx;
+  margin-right: 14rpx;
+  padding: 5rpx;
+  box-sizing: border-box;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.headimg {
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
 }
-
-.userinfo-nickname {
-  color: #aaa;
+.userinfo_right {
+  float: left;
+  width: 525rpx;
 }
-
-.usermotto {
-  margin-top: 200px;
+.userName {
+  width: 100%;
+  box-sizing: border-box;
+  margin-top: 14rpx;
+  padding-left: 20rpx;
+  font-size: 28rpx;
+  line-height: 40rpx;
+  color: #fff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.other_info {
+  width: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+.identity {
+  width: 240rpx;
+  height: 70rpx;
+}
+.identity_icon {
+  float: left;
+  width: 70rpx;
+  height: 70rpx;
+  background: #fff;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 70rpx;
+}
+.icon_img {
+  width: 40rpx;
+  height: 40rpx;
+  margin-top: 15rpx;
+}
+.identity_name {
+  float: left;
+  width: 175rpx;
+  height: 62rpx;
+  margin-top: 4rpx;
+  margin-left: -20rpx;
+  padding-left: 15rpx;
+  background: #fff;
+  border-radius:0 31rpx 31rpx 0;
+  font-size: 26rpx;
+  color: #46d7b6;
+  line-height: 62rpx;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.result {
+  width: 260rpx;
+  height: 62rpx;
+  margin-top: 4rpx;
+  background: #fff;
+  border-radius: 31rpx;
+  padding-top: 17rpx;
+  box-sizing: border-box;
+  /* box-shadow: 0px 4px 12px -4px rgba(0, 0, 0, 0.3); */
+}
+.result_left,.result_right {
+  float: left;
+  width: 50%;
+  font-size: 26rpx;
+  color: #46d7b6;
+  line-height: 28rpx;
+  text-align: center;
+  box-sizing: border-box;
+}
+.result_left {
+  border-right: 2rpx solid  #46d7b6;
+}
+.ranking-list {
+  width: 345rpx;
+  height: 130rpx;
+  margin: 65rpx auto 0;
+  box-sizing: border-box;
+  border: 20rpx solid #fff;
+  border-radius: 65rpx;
+  text-align: center;
+  line-height: 90rpx;
+  font-size: 32rpx;
+  color: #fff;
+}
+.ranking-list_icon {
+  margin-right: 8rpx;
+}
+.bottom-entry {
+  width: 100%;
+  /* height: 805rpx; */
+  box-sizing: border-box;
+  border-radius: 70rpx 70rpx 0 0;
+  margin-top: -70rpx;
+  background: #fefefe;
+  /* box-shadow: 4px 4px 16px 0px rgba(0, 0, 0, 0.3); */
+}
+.entry_list {
+  width: 100%;
+  height: 590rpx;
+  padding: 10rpx 80rpx 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.pk-entry {
+  width: 265rpx;
+  height: 265rpx;
+  background: #7ad8fe;
+  margin-top: 60rpx;
+  border-radius: 26rpx;
+  text-align: center;
+  font-size: 38rpx;
+  color: #eeffff;
+}
+.pk-entry_img {
+  width: 150rpx;
+  height: 120rpx;
+  margin-top: 34rpx;
+}
+.pk-entry.test {
+  background: linear-gradient(to top right, #9999f9, 50%, #6c88d2)
+}
+.pk-entry.knowledge {
+  background: #f9ca7a;
+}
+.pk-entry.wrongTopic {
+  background: #92ced6;
+}
+.bottom-fun {
+  width: 100%;
+  height: 35rpx;
+  position: absolute;
+  left: 0;
+  bottom: 3%;
+  padding: 0 80rpx;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+.bottom-fun_result {
+  font-size: 28rpx;
+  color: #46d7b6;
+  line-height: 35rpx;
+}
+.bottom-fun_icon {
+  margin-right: 4rpx;
+}
+/* 规则弹框 */
+.modal {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .4);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.rules-box {
+  width: 79%;
+  height: 81%;
+  background: #fff;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  border-radius: 37rpx;
+  overflow: hidden;
+}
+.rules-box_title {
+  width: 100%;
+  height: 85rpx;
+  background: #46d7b6;
+  border-radius: 37rpx 37rpx 0 0;
+  text-align: center;
+  font-size: 26rpx;
+  color: #cafffe;
+  line-height: 85rpx;
+}
+.rules-box_text {
+  width: 100%;
+  height: 90%;
+  box-sizing: border-box;
+  padding: 0 36rpx;
+  overflow: scroll;
+  font-size: 24rpx;
+  color: #58585a;
+}
+.text_p {
+  margin-top: 30rpx;
+}
+.rules-box_close {
+  width: 40rpx;
+  height: 40rpx;
+  position: absolute;
+  top: 23rpx;
+  right: 23rpx;
+  font-size: 34rpx;
+  color: #cafffe;
 }
