--- a/pages/week/index.less
+++ b/pages/week/index.less
@@ -164,12 +164,14 @@
             }
             .topic-footer {
                 height: 140rpx;
-                .next-btn{
+                padding: 0 12rpx;
+                .switch-btn{
                     border-radius: 80rpx;
+                    height: 88rpx;
+                    line-height: 36rpx;
                     font-size: 36rpx;
                     font-weight: 400;
-                    padding: 12rpx 0;
-                    width: 350rpx;
+                    width: 40%;
                     background-color: transparent;
                     border: 10rpx solid #43d9be;
                     color:#43d9be;
