--- a/pages/week/index.wxss
+++ b/pages/week/index.wxss
@@ -160,13 +160,15 @@
 }
 .week-box .week .topic-box .topic-footer {
   height: 140rpx;
+  padding: 0 12rpx;
 }
-.week-box .week .topic-box .topic-footer .next-btn {
+.week-box .week .topic-box .topic-footer .switch-btn {
   border-radius: 80rpx;
+  height: 88rpx;
+  line-height: 36rpx;
   font-size: 36rpx;
   font-weight: 400;
-  padding: 12rpx 0;
-  width: 350rpx;
+  width: 40%;
   background-color: transparent;
   border: 10rpx solid #43d9be;
   color: #43d9be;
